# automated-trading-system

./: .env.example  .gitignore  Dockerfile  LEARNINGS.md  README.md  docker-compose.yml  pyproject.toml
architecture/: 01_VISION.md  02_REQUIREMENTS.md  03_ARCHITECTURE.md  04_TECHNOLOGY_STACK.md  05_IMPLEMENTATION_ROADMAP.md  06_KEY_CONSIDERATIONS.md  07_SCALING_ROADMAP.md  README.md
src/: __init__.py
src/trading/: __init__.py  __main__.py  config.py  models.py
src/trading/backtest/: __init__.py  engine.py  metrics.py
src/trading/brokers/: __init__.py  base.py  zerodha.py
src/trading/data/: __init__.py  base.py  yahoo.py
src/trading/db/: __init__.py  models.py
src/trading/execution/: __init__.py  base.py  simulated.py
src/trading/portfolio/: __init__.py  state.py
src/trading/risk/: __init__.py  checks.py
src/trading/strategy/: __init__.py  base.py  sma_crossover.py
tests/: test_backtest.py  test_metrics.py  test_portfolio.py  test_risk.py
